@@ -22,7 +22,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.util.UriComponentsBuilder;
 
-
 import com.example.backend.user.entity.UserEntity; //(본인의 User 엔티티 경로 확인)
 
 import jakarta.mail.Session;
@@ -45,16 +44,16 @@ public class SecurityConfig {
     private final JwtUtil jwtUtil;
     private final KakaoService kakaoService;
 
-    // 수동 생성자는 삭제하거나 모든 필드를 포함해야 합니다. 
+    // 수동 생성자는 삭제하거나 모든 필드를 포함해야 합니다.
     // @RequiredArgsConstructor가 있으므로 아래 생성자는 지우셔도 됩니다.
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-		http
+        http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session
-                		.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
                                 "/auth/**",
@@ -76,8 +75,7 @@ public class SecurityConfig {
                                 "/photos/**",
                                 "/albums/**",
                                 "/uploads/**",
-                                "/qna/**"
-                        		)
+                                "/qna/**")
                         .permitAll()
                         .anyRequest().authenticated())
                 .addFilterBefore(new JWTAuthenticationFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class)
@@ -88,8 +86,8 @@ public class SecurityConfig {
                                 .baseUri("/oauth2/authorization")
                                 .authorizationRequestRepository(cookieAuthorizationRequestRepository())
                                 .authorizationRequestResolver(authorizationRequestResolver()))
-                        .redirectionEndpoint(redir -> redir
-                                .baseUri("/login/oauth2/code/*"))
+                        // .redirectionEndpoint(redir -> redir
+                        // .baseUri("/login/oauth2/code/*"))
                         .successHandler(oAuth2AuthenticationSuccessHandler())
                         .failureHandler(new SimpleUrlAuthenticationFailureHandler(
                                 "http://localhost:5173/login?error=true")));
@@ -104,6 +102,7 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler() {
+        System.out.println("핸들러 진입 성공");
         return (request, response, authentication) -> {
             try {
                 OAuth2User oAuth2User = (OAuth2User) authentication.getPrincipal();
@@ -111,16 +110,14 @@ public class SecurityConfig {
 
                 // 1. 카카오 정보 추출
                 Long kakaoId = Long.parseLong(attributes.get("id").toString());
-                
+
                 Map<String, Object> properties = (Map<String, Object>) attributes.get("properties");
                 String nickname = "Unknown";
                 if (properties != null && properties.get("nickname") != null) {
                     nickname = properties.get("nickname").toString();
                 }
 
-                System.out.println("=== 카카오 인증 성공: " + nickname + " ===");
-
-                // 2. ★ DB 저장 로직 호출  ★
+                // 2. ★ DB 저장 로직 호출 ★
                 // 이제 Map 형태로 user와 isNewUser를 받아옵니다.
                 Map<String, Object> loginResult = kakaoService.processKakaoLogin(kakaoId, nickname);
                 if (loginResult == null || !loginResult.containsKey("user") || !loginResult.containsKey("isNewUser")) {
@@ -128,16 +125,18 @@ public class SecurityConfig {
                 }
                 UserEntity user = (UserEntity) loginResult.get("user");
                 boolean isNewUser = (boolean) loginResult.get("isNewUser");
-                
+
                 System.out.println("=== DB 저장/조회 완료 (신규여부: " + isNewUser + ") ===");
 
                 // 3. JWT 토큰 생성
                 String accessToken = jwtUtil.createToken(user.getId(), user.getEmail());
+                String refreshToken = jwtUtil.createRefreshToken(user.getId(), user.getEmail());
 
-                // 4. 프론트엔드 콜백 URL로 리다이렉트 (isNewUser와 nickname 추가)
+                // 4. 프론트엔드 콜백 URL로 리다이렉트
                 UriComponentsBuilder uriBuilder = UriComponentsBuilder
                         .fromUriString("http://localhost:5173/auth/kakao/callback")
-                        .queryParam("token", accessToken)
+                        .queryParam("accessToken", accessToken)
+                        .queryParam("refreshToken", refreshToken)
                         .queryParam("isNewUser", isNewUser); // 신규 가입 여부 전달
 
                 if (isNewUser) {
@@ -156,7 +155,6 @@ public class SecurityConfig {
         };
     }
 
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
@@ -168,13 +166,13 @@ public class SecurityConfig {
                 "http://localhost",
                 "capacitor://localhost"));
 
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        //config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowedHeaders(List.of(
-				"Authorization",//JWT Bearer 토큰
-				"Content-Type",//application/json
-				"X-Requested-With"//Ajax 요청 식별				
-		));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization", // JWT Bearer 토큰
+                "Content-Type", // application/json
+                "X-Requested-With")); // Ajax 요청 식별
+
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -186,23 +184,18 @@ public class SecurityConfig {
     public OAuth2AuthorizationRequestResolver authorizationRequestResolver() {
         DefaultOAuth2AuthorizationRequestResolver resolver = new DefaultOAuth2AuthorizationRequestResolver(
                 clientRegistrationRepository, "/oauth2/authorization");
-
-        resolver.setAuthorizationRequestCustomizer(customizer -> 
-        	customizer.attributes(attrs -> {
-        		attrs.remove("code_challenge");
-        		attrs.remove("code_challenge_method");
+        resolver.setAuthorizationRequestCustomizer(customizer -> customizer.attributes(attrs -> {
+            attrs.remove("code_challenge");
+            attrs.remove("code_challenge_method");
         })
-        .additionalParameters(params -> {
-               params.remove("code_challenge");
-               params.remove("code_challenge_method");
-               
-               // 카카오에게 매번 로그인 창을 띄우라고 명령 ★
-               // "login": 로그인 폼 출력 / "consent": 동의 화면 출력
-               params.put("prompt", "login");
-           }));
+                .additionalParameters(params -> {
+                    params.remove("code_challenge");
+                    params.remove("code_challenge_method");
 
+                    // 카카오에게 매번 로그인 창을 띄우라고 명령 ★
+                    // "login": 로그인 폼 출력 / "consent": 동의 화면 출력
+                    params.put("prompt", "login");
+                }));
         return resolver;
     }
-    
-
 }
